<resources>
    <string name="app_name">CineWave</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Имя</string>
    <string name="role">Роль</string>
    <string name="best">Лучшее</string>
    <string name="all_with_arrow"><![CDATA[Все >]]></string>
    <string name="filmography">Фильмография</string>
    <string name="to_list_with_arrow"><![CDATA[К списку >]]></string>
    <string name="film_count">количество фильмов</string>
    <string name="actor">Актёр</string>
    <string name="producer">Продюсер</string>
    <string name="voice_actor">Актёр озвучки</string>
    <string name="actor_self">Актёр: играет самого себя</string>
    <string name="description">Description</string>
    <string name="add_to_collection">Добавить в коллекцию</string>
    <string name="search_settings">Настройки поиска</string>
    <string name="write_collection_name">Придумайте название для вашей новой коллекции</string>
    <string name="done">Готово</string>
    <string name="gallery">Галерея</string>
    <string name="frames">Кадры</string>
    <string name="backstage">Со съёмок</string>
    <string name="posters">Постеры</string>
    <string name="fanarts">Фан-арты</string>
    <string name="wallpapers">Обои</string>
    <string name="screenshots">Скриншоты</string>
    <string name="seasons_and_series">Сезоны и серии</string>
    <string name="all">Все</string>
    <string name="season_serie">Сезон, серия</string>
    <string name="actors_in_film">В фильме снимались</string>
    <string name="workers_in_film">Над фильмом работали</string>
    <string name="similar_films">Похожие фильмы</string>
    <string name="premieres">Премьеры</string>
    <string name="popular">Популярное</string>
    <string name="dynamic_1">Подборка 1</string>
    <string name="top250">Топ-250</string>
    <string name="dynamic2">Подборка 2</string>
    <string name="serials">Сериалы</string>
    <string name="collection_name">Collection name</string>
    <string name="temp_filmname">filmname</string>
    <string name="temp_genre">genre</string>
    <string name="temp_0_0">0.0</string>
    <string name="temp_staffname">staffname</string>
    <string name="temp_staffrole">staffrole</string>
    <string name="temp_0">0</string>
    <string name="temp_seriename">serieName</string>
    <string name="temp_seriedate">serieDate</string>
    <string name="show_all">Показать все</string>
    <string name="viewed">Просмотрено</string>
    <string name="collections">Коллекции</string>
    <string name="create_my_collection">Создать свою коллекцию</string>
    <string name="you_were_interested">Вам было интересно</string>
    <string name="films_actors_directors">Фильмы, актёры, режиссёры</string>
    <string name="unfortunately_not_found">К сожалению, по вашему запросу ничего не найдено</string>
    <string name="show">Показывать</string>
    <string name="films">Фильмы</string>
    <string name="country">Страна</string>
    <string name="russia">Россия</string>
    <string name="genre">Жанр</string>
    <string name="comedy">Комедия</string>
    <string name="year">Год</string>
    <string name="from_2000_to_2020">C 2000 до 2020</string>
    <string name="rating">Рейтинг</string>
    <string name="any">любой</string>
    <string name="sort">Сортировать</string>
    <string name="date">Дата</string>
    <string name="popularity">Популярность</string>
    <string name="exclude_viewed">Исключить просмотренное</string>
    <string name="season">Сезон</string>
    <string name="season_series">Сезон/серии</string>
    <string name="no_name">No name</string>
    <string name="fulm_count_with_var">Количество фильмов: %1$s</string>
    <string name="bundle_var_kinopoiskid">kinopoiskId</string>
    <string name="bundle_var_data">data</string>
    <string name="bundle_var_datatype">dataType</string>
    <string name="bundle_var_title">title</string>
    <string name="bundle_var_staffId">staffId</string>
    <string name="bundle_var_ratingname">ratingName</string>
    <string name="bundle_var_yeargenre">yearGenre</string>
    <string name="bundle_var_favbuttom">favButtom</string>
    <string name="bundle_var_bookmarkbuttom">bookmarkButtom</string>
    <string name="bundle_var_viewedbuttom">viewedButtom</string>
    <string name="bundle_var_drawablebytes">drawableBytes</string>
    <string name="seasong_and_series_count_with_var">Количество сезонов: %1$s. Количество серий: %2$s</string>
    <string name="season_number_and_series_count_with_var">Сезон %1$s, серий: %2$s</string>
    <string name="favourite">Любимые</string>
    <string name="towatch">Хочу посмотреть</string>
    <string name="collection_empty_warning">Коллекция пуста!</string>
    <string name="enter_country">Введите страну</string>
    <string name="enter_genre">Введите жанр</string>
    <string name="no_match_found">No Match found</string>
    <string name="any_fem">любая</string>
    <string name="any_male">любой</string>
    <string name="search_in_period_from">Искать в период с</string>
    <string name="search_in_period_to">Искать в период до</string>
    <string name="cancel">Отмена</string>
    <string name="OK">OK</string>
    <string name="turn_on_viewed">Включить просмотренное</string>
    <string name="turn_off_viewed">Исключить просмотренное</string>
    <string name="collection_with_var_was_successfully_saved">Коллекция \'%1$s\' была успешно сохранена!</string>
    <string name="collection_with_var_already_exists">Коллекция \'%1$s\' уже существует!</string>
    <string name="need_to_enter_collection_name">Необходимо ввести имя коллекции!</string>
    <string name="button_is_not_exist">Кнопки не существует</string>
    <string name="skip">Пропустить</string>
    <string name="an_error_occured_while_loading_data">Произошла ошибка при загрузке данных : %1$s</string>
</resources>