<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.search.FragmentSearchFilters">
    <TextView
        android:id="@+id/textPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Настройки поиска"
        android:layout_marginTop="21.5dp"
        android:fontFamily="@font/graphik_medium"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:padding="5dp"

        android:src="@drawable/iconbackbutton"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textPageTitle"
        app:layout_constraintBottom_toBottomOf="@id/textPageTitle"
        />
    <TextView
        android:id="@+id/showFiltersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:fontFamily="@font/graphik_light"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        />
    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/showFilterToggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:checkedButton="@id/button1"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="@id/showFiltersText"
        app:layout_constraintTop_toBottomOf="@id/showFiltersText"
        >
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/films"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/serials"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>
    <TextView
        android:id="@+id/searchTextCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:fontFamily="@font/graphik_light"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/showFilterToggleGroup"
        app:layout_constraintStart_toStartOf="@id/showFiltersText"/>
    <TextView
        android:id="@+id/searchCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/russia"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/graphik_light"
        android:textSize="14sp"
        android:layout_marginEnd="26dp"
        app:layout_constraintTop_toTopOf="@id/searchTextCountry"
        app:layout_constraintBottom_toBottomOf="@id/searchTextCountry"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/delimiter1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B5B5C9"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/searchTextCountry"/>
    <TextView
        android:id="@+id/searchTextGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:fontFamily="@font/graphik_light"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/delimiter1"
        app:layout_constraintStart_toStartOf="@id/showFiltersText"/>
    <TextView
        android:id="@+id/searchGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comedy"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/graphik_light"
        android:textSize="14sp"
        android:layout_marginEnd="26dp"
        app:layout_constraintTop_toTopOf="@id/searchTextGenre"
        app:layout_constraintBottom_toBottomOf="@id/searchTextGenre"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/delimiter2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B5B5C9"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/searchTextGenre"/>
    <TextView
        android:id="@+id/searchTextYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/graphik_light"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/delimiter2"
        app:layout_constraintStart_toStartOf="@id/showFiltersText"
        />
    <TextView
        android:id="@+id/searchYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_2000_to_2020"
        android:fontFamily="@font/graphik_light"
        android:textSize="14sp"
        android:layout_marginEnd="26dp"
        app:layout_constraintTop_toTopOf="@id/searchTextYear"
        app:layout_constraintBottom_toBottomOf="@id/searchTextYear"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/delimiter3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B5B5C9"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/searchTextYear"/>
    <TextView
        android:id="@+id/searchTextRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:fontFamily="@font/graphik_light"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/delimiter3"
        app:layout_constraintStart_toStartOf="@id/showFiltersText"/>
    <TextView
        android:id="@+id/searchRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/any"
        android:fontFamily="@font/graphik_light"
        android:textSize="14sp"
        android:layout_marginEnd="26dp"
        app:layout_constraintTop_toTopOf="@id/searchTextRating"
        app:layout_constraintBottom_toBottomOf="@id/searchTextRating"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.slider.RangeSlider
        android:id="@+id/searchRatingSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:valueFrom = '0'
        android:valueTo = '10'
        app:values="@array/initial_slider_values"
        android:stepSize  = '1'
        app:tickVisible = "false"
        app:labelBehavior = "withinBounds"
        app:layout_constraintTop_toBottomOf="@id/searchTextRating"/>
    <View
        android:id="@+id/delimiter4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B5B5C9"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/searchRatingSlider"/>
    <TextView
        android:id="@+id/sortFiltersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:fontFamily="@font/graphik_light"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/delimiter4"
        app:layout_constraintStart_toStartOf="@id/showFiltersText"
        android:layout_marginTop="16dp"
        />
    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/sortFilterToggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:checkedButton="@id/buttonSort1"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="@id/sortFiltersText"
        app:layout_constraintTop_toBottomOf="@id/sortFiltersText"
        >
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/buttonSort1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/buttonSort2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:text="@string/popularity"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/buttonSort3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <View
        android:id="@+id/delimiter5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B5B5C9"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/sortFilterToggleGroup"/>
    <ImageView
        android:id="@+id/viewedImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_hide_button"
        android:fontFamily="@font/graphik_light"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/delimiter5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="34dp"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:id="@+id/searchViewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exclude_viewed"
        android:fontFamily="@font/graphik_light"
        android:textSize="16sp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="@id/viewedImage"
        app:layout_constraintBottom_toBottomOf="@id/viewedImage"
        app:layout_constraintStart_toEndOf="@id/viewedImage"/>

</androidx.constraintlayout.widget.ConstraintLayout>