<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.FilmGalleryFragment">

    <!-- TODO: Update blank fragment layout -->
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:layout_marginTop="21.5dp"
        android:fontFamily="@font/graphik_medium"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:padding="5dp"
        android:src="@drawable/iconbackbutton"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textPageTitle"
        app:layout_constraintBottom_toBottomOf="@id/textPageTitle"
        />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/textPageTitle">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingEnd="25dp"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFrames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:visibility="gone"
                android:text="@string/frames" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBackstage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:visibility="gone"
                android:text="@string/backstage" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPosters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:visibility="gone"
                android:text="@string/posters" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chipFanArts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:visibility="gone"
                android:text="@string/fanarts" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chipWallpapers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:visibility="gone"
                android:text="@string/wallpapers" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chipScreenshot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:visibility="gone"
                android:text="@string/screenshots" />



        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filmGalleryRecycler"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>