<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="111dp"
    android:layout_height="194dp"
    android:layout_marginEnd="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/filmCover"
        android:layout_width="111dp"
        android:layout_height="156dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:id="@+id/filmRatingVector"
        android:layout_width="40dp"
        android:layout_height="23dp"
        android:src="@drawable/film_rating_vector"
        app:layout_constraintTop_toTopOf="@id/filmCover"
        app:layout_constraintEnd_toEndOf="@id/filmCover"
        android:padding="4dp"/>
    <View
        android:id="@+id/gradientMask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:background="@drawable/gradient_mask_film_viewed"
        app:layout_constraintTop_toTopOf="@id/filmCover"
        app:layout_constraintBottom_toBottomOf="@id/filmCover"
        app:layout_constraintStart_toStartOf="@id/filmCover"
        app:layout_constraintEnd_toEndOf="@id/filmCover"
        />
    <TextView
        android:id="@+id/filmRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_0_0"
        android:gravity="center"
        android:fontFamily="@font/graphik_medium"
        android:textSize="8sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/filmRatingVector"
        app:layout_constraintBottom_toBottomOf="@id/filmRatingVector"
        app:layout_constraintStart_toStartOf="@id/filmRatingVector"
        app:layout_constraintEnd_toEndOf="@id/filmRatingVector"/>
    <TextView
        android:id="@+id/filmName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graphik_regular"
        android:textSize="14sp"
        android:textColor="@color/light_text_color"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/temp_filmname"
        app:layout_constraintTop_toBottomOf="@id/filmCover"
        app:layout_constraintStart_toStartOf="@id/filmCover"/>
    <TextView
        android:id="@+id/filmGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graphik_regular"
        android:textSize="12sp"
        android:textColor="#838390"
        android:text="@string/temp_genre"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/filmName"
        app:layout_constraintStart_toStartOf="@id/filmName"/>

    <!-- drawable/frame_7294.xml -->



</androidx.constraintlayout.widget.ConstraintLayout>